Fix wrapping

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -214,7 +214,6 @@ body#blog-about {
 		font-family: inherit;
 		font-size: inherit;
 		line-height: inherit;
-		white-space: nowrap;
 		text-decoration: none;
 		padding: 0;
 		margin: 0;
